fix comix size on safari, Meeting Space

--- a/_how.scss
+++ b/_how.scss
@@ -34,6 +34,10 @@
             color: $white;
            // @include box-shadow(5px 5px 0 rgba($theme-color, .2));
            margin:1%;
+
+           img {
+               width: 100%;
+           }
         }
 
         #how-videochat {
